aos bottom bottom

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
         <section class="about_community">
             <h2 class="about_com_header">At Boston University 🐶</h2>
             <!-- productvision -->
-            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-bottom">
+            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="bottom-bottom">
                 <div class="about_com_card_info">
                     <h3><b>President, Marketing Chair</b></h3>
                     <br>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <!-- alpha chi sigma -->
-            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-bottom">
+            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="bottom-bottom">
                 <div class="about_com_card_info">
                     <h3><b>Professional Development Chair, Public Relations Chair</b></h3>
                     <br>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <!-- resident assistant -->
-            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-bottom">
+            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="bottom-bottom">
                 <div class="about_com_card_info">
                     <h3><b>Resident Assistant</b></h3>
                     <br>
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <!-- kilachand peer mentor -->
-            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-bottom">
+            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="bottom-bottom">
                 <div class="about_com_card_info">
                     <h3><b>Peer Mentor</b></h3>
                     <br>
