--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W7YSRB23Z0"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B8N2RYNKMX"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-W7YSRB23Z0');
+        gtag('config', 'G-B8N2RYNKMX');
     </script>
 </head>
 <body>
