--- a/about.html
+++ b/about.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andy Vo | About</title>
     <meta name="description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-199547569-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-199547569-1');
+    </script>
     <!-- facebook tags -->
     <meta property="og:title" content="Andy Vo">
     <meta property="og:description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
@@ -33,15 +42,6 @@
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-199547569-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-199547569-1');
-    </script>
 
 </head>
 <body>
@@ -86,7 +86,7 @@
         <section class="about_community">
             <h2 class="about_com_header">At Boston University 🐶</h2>
             <!-- productvision -->
-            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="bottom-bottom">
+            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <div class="about_com_card_info">
                     <h3><b>President, Marketing Chair</b></h3>
                     <br>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <!-- alpha chi sigma -->
-            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="bottom-bottom">
+            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <div class="about_com_card_info">
                     <h3><b>Professional Development Chair, Public Relations Chair</b></h3>
                     <br>
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <!-- resident assistant -->
-            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="bottom-bottom">
+            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <div class="about_com_card_info">
                     <h3><b>Resident Assistant</b></h3>
                     <br>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <!-- kilachand peer mentor -->
-            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="bottom-bottom">
+            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <div class="about_com_card_info">
                     <h3><b>Peer Mentor</b></h3>
                     <br>
