--- a/bucsambassadors.html
+++ b/bucsambassadors.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="cs_content_text">
                         <h4 class="h4sub">BU CS Ambassadors (BUCSA) hosted a web design competition to redesign their entire website.</h4>
-                        <p>Over the course of two weeks, my team and I came together to create the new face for BUCSA. BUCSA is a student organization whose mission is to serve as a platform for a more collaborative, inclusive, and unified computer science community. As a student group that aimed to build connections through mentorship, our goal was not only to add color to a website, but to develop layers of depth in the meaning of their brand. Although I was the only web developer on the team, AKA Designs was successful in earning <b>first place</b> for our project.</p>
+                        <p>Over the course of two weeks, my team and I came together to create the new face for BUCSA. As a student group that aimed to build connections through mentorship, our goal was not only to add color to a website, but to develop layers of depth in the meaning of their brand. Although I was the only web developer on the team, AKA Designs was successful in earning <b>first place</b> for our project.</p>
                     </div>
                 </div>
                 <div class="cs_content">
@@ -108,15 +108,15 @@
                         <h3><b>Our Solution</b></h3>
                     </div>
                     <div class="cs_content_text">
-                        <p>Our solution was both a full website redesign that <b>emphasized the focus on the mentor-mentee program.</b> It utilized modern design trends and pulled from the Boston University design system with the reds and blacks to visually appeal to incoming computer science students.</p>
+                        <p>Our solution was both a full website redesign that <b>emphasized the focus on the mentor-mentee program.</b> It utilized modern design trends and pulled from the Boston University design system with the reds and blacks to visually appeal to incoming computer science students. Find the demo video further below and the GitHub repo <a href="https://github.com/andyyvo/bucsawebdesign">here.</a></p>
                     </div>
                 </div>
                 <div class="cs_overview_img">
                     <img src="/images/casestudy_imgs_bucsa/three_devices.png" alt="BUCSA Redesign Mockups">
                 </div>
         </section>
-        <section class="casestudy_section csresearch">
-            <h2 class="cs_header">Research</h2>
+        <section class="casestudy_section cskickoff">
+            <h2 class="cs_header">Kickoff</h2>
             <div class="cs_content">
                 <div class="cs_content_title">
                     <h3><b>Problem</b></h3>
@@ -141,6 +141,60 @@
                 </div>
                 <div class="cs_content_text">
                     <p>With a lack of content material, design system, and time to work with, I put together a goal-oriented approach that would let me research, design, and implement within the two-week timeframe. To meet the BU website requirement, I drew inspiration from <a href="https://www.bu.edu/" target="_blank">Boston University</a>, <a href="https://www.bu.edu/cs/" target="_blank">BU Department of Computer Science</a>, and student groups including <a href="https://www.bu.edu/csc/fysop/" target="_blank">FYSOP</a>, <a href="https://www.buakpsi.com/" target="_blank">BU AKPsi</a>, and <a href="https://www.axs-bu.com/" target="_blank">BU AXS</a> (I designed this website too, but it uses Squarespace).</p>
+                </div>
+            </div>
+        </section>
+        <section class="casestudy_section csresearch">
+            <h2 class="cs_header">Research</h2>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b>Audience</b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <p><b>BUCSA</b> is a student organization whose mission is to serve as a platform for a more collaborative, inclusive, and unified computer science community.</p>
+                    <br>
+                    <p>We were able to hold a few chats and conversations with 4 students ranging from BUCSA members to BU students. Focusing primarily on the interests of our client, we wanted to better understand the pain points of the current system and in broader scope, what the mission of BUCSA is to form user personas.</p>
+                </div>
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b>Questions</b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <p><i>"How might we increase the retention rate/decrease the bounce rate of users from the landing screen?"</i></p>
+                    <p><i>"How might we draw more attention to the mentorship program?"</i></p>
+                    <p><i>"How might we limit the number of clicks to traverse across the website?"</i></p>
+                    <p><i>"How might we emphasize the importance of joining student groups?"</i></p>
+                </div>
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b>Goal</b></h3>
+                    <br>
+                    <h3><b><span class="highlightBlue">How do we create an experience for BU CS students to drive a need for a community through the Ambassadors platform?</span></b></h3>
+                </div>
+            </div>
+        </section>
+        <section class="casestudy_section cspersonas">
+            <h2 class="cs_header">Personas</h2>
+            <div id="personas_flex">
+                <div class="personas_content">
+                    <img src="/images/casestudy_imgs_bucsa/student.png" alt="Boston University Student">
+                    <p><b>A BU student interested in joining BUCSA</b></p>
+                </div>
+                <div class="personas_content">
+                    <img src="/images/casestudy_imgs_bucsa/ambassador.png" alt="BU CS Ambassador">
+                    <p><b>A BU CS Ambassador</b></p>
+                </div>
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b>Key Takeaways</b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <p>While we knew it was critical to focus on the students who would be interested in getting involved as an Ambassador or the mentorship program, <b>we also discovered that other Ambassadors would be using the website</b> during our research.</p>
+                    <br>
+                    <p>Although a login system with content and features limited only to members was a listed desirable by the client, <b>we recognized that the limited scope of the two week timeframe made it infeasible to integrate</b>. As a result, our efforts were allocated to emphasize a resources page for both current and prospective members.</p>
                 </div>
             </div>
         </section>
