--- a/bucsambassadors.html
+++ b/bucsambassadors.html
@@ -141,6 +141,9 @@
                 </div>
                 <div class="cs_content_text">
                     <p>With a lack of content material, design system, and time to work with, I put together a goal-oriented approach that would let me research, design, and implement within the two-week timeframe. To meet the BU website requirement, I drew inspiration from <a href="https://www.bu.edu/" target="_blank">Boston University</a>, <a href="https://www.bu.edu/cs/" target="_blank">BU Department of Computer Science</a>, and student groups including <a href="https://www.bu.edu/csc/fysop/" target="_blank">FYSOP</a>, <a href="https://www.buakpsi.com/" target="_blank">BU AKPsi</a>, and <a href="https://www.axs-bu.com/" target="_blank">BU AXS</a> (I designed this website too, but it uses Squarespace).</p>
+                    <br>
+                    <h4 class="h4sub">Website Desirables</h4>
+                    <img class="figma_cs_imgs" src="/images/casestudy_imgs_bucsa/figma_list_of_desirables.png" alt="List of Desirables Requested Drafted on Figma">
                 </div>
             </div>
         </section>
@@ -161,6 +164,11 @@
                     <h3><b>Questions</b></h3>
                 </div>
                 <div class="cs_content_text">
+                    <p>Before I started to formulate the steps I would take to put everything together, I brainstormed several questions on Figma to pose to both myself and the client.</p>
+                    <img class="figma_cs_imgs" src="/images/casestudy_imgs_bucsa/figma_initial_qs.png" alt="Initial Questions Drafted on Figma">
+                    <h4 class="h4sub">How might we...</h4>
+                    <p>Accumulating my research together, I drafted some <i>"How might we..."</i> statements to drive the project in the right direction. The short timeframe meant that answering each question had to produce a lot of content ideally.</p>
+                    <br>
                     <p><i>"How might we increase the retention rate/decrease the bounce rate of users from the landing screen?"</i></p>
                     <p><i>"How might we draw more attention to the mentorship program?"</i></p>
                     <p><i>"How might we limit the number of clicks to traverse across the website?"</i></p>
@@ -200,12 +208,109 @@
         </section>
         <section class="casestudy_section csdesign">
             <h2 class="cs_header">Design</h2>
-        </section>
-        <section class="casestudy_section csfinal_design">
-            <h2 class="cs_header">Final Design</h2>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b>Initial Concept</b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <h4 class="h4sub">Information Architecture</h4>
+                    <p>After deciding on what key features and desirables would be most important to users, I organized an informal list by page to structure the website.</p>
+                    <img class="figma_cs_imgs" src="/images/casestudy_imgs_bucsa/figma_website_outline.png" alt="Information Architecture Drafted on Figma">
+                    <h4 class="h4sub">Low-Fidelity Wireframes</h4>
+                    <p>Time was short and I knew that the development side would take up a lot, so I drew wireframes to guide my designs and visual hierarchy.</p>
+                    <div id="bucsa_lofi">
+                        <img src="/images/casestudy_imgs_bucsa/lofiwireframe1.png" alt="BUCSA website lo-fi wireframes">
+                        <img src="/images/casestudy_imgs_bucsa/lofiwireframe2.png" alt="BUCSA website lo-fi wireframes">
+                    </div>
+                    <h4 class="h4sub">Design System</h4>
+                    <p>With a lot of grays and very few hints of red on the original WordPress page, I made sure the brand of the Ambassadors had some flair, so I utilized the contrast between the bright red and smooth black, and added a lot of small accent colors.</p>
+                    <img src="/images/casestudy_imgs_bucsa/figma_stylesheet.png" alt="Website Design System Stylesheet" class="figma_cs_imgs">
+                </div>
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b>Design Decisions</b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <h4 class="h4sub">Nav & Footer</h4>
+                    <p>These were the two consistent elements recurring on every page. Knowing a lot of students would be viewing on their mobile devices, I made sure to design mobile responsive views.</p>
+                    <div class="griditem twocol">
+                        <div class="colgrid">
+                            <img class="figma_cs_imgs" src="/images/casestudy_imgs_bucsa/bucsa_nav_mobile.png" alt="Mobile Responsive Nav Bar Mockup">
+                            <img class="figma_cs_imgs2" src="/images/casestudy_imgs_bucsa/bucsa_nav.png" alt="Desktop Nav Bar Mockup">
+                            <img class="figma_cs_imgs2" src="/images/casestudy_imgs_bucsa/bucsa_nav_active.png" alt="Mobile Responsive Nav Bar with Active State Mockup">
+                        </div>
+                        <div class="colgrid">
+                            <img class="figma_cs_imgs2" src="/images/casestudy_imgs_bucsa/bucsa_footer.png" alt="Footer Mockup">
+                        </div>
+                    </div>
+                    <h4 class="h4sub">Landing Page</h4>
+                    <p>From previous experience, I learned that a landing page is the biggest bottleneck to retaining a user. As the user scrolls down, the website unfolds the story behind the Ambassadors. From a call for community to personal anecdotes, each section emphasizes a collective mindset using the "Our..." pronoun.</p>
+                </div>
+            </div>
+            <div class="griditem threecol">
+                <img src="/images/casestudy_imgs_bucsa/bucsa_home_hero.png" alt="Landing Home Hero" class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bucsa/bucsa_home_mission.png" alt="Landing Home Mission" class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bucsa/bucsa_home_community.png" alt="Landing Home Community" class="figma_cs_imgs2">
+            </div>
+            <div class="griditem threecol">
+                <img src="/images/casestudy_imgs_bucsa/bucsa_home_clubs.png" alt="Landing Home Clubs"  class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bucsa/bucsa_home_mailing.png" alt="Landing Home Mailing List" class="figma_cs_imgs2">
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b></b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <h4 class="h4sub">Consistent Hero Designs</h4>
+                    <p>I'm a proud user of <a href="https://storyset.com/">Storyset</a> graphics. The range of artstyles is very versatile and it adds a lot of flavor to what could simply be an informative hero page. With a relevant graphic to accompany the content, users would find more interest browsing.</p>
+                </div>
+            </div>
+            <div class="griditem threecol">
+                <img src="/images/casestudy_imgs_bucsa/landing_ambassadors.png" alt="Ambassadors Hero Screen" class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bucsa/landing_mentor.png" alt="Mentor Hero Screen" class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bucsa/landing_resources.png" alt="Resources Hero Screen" class="figma_cs_imgs2">
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b></b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <h4 class="h4sub">Final Design</h4>
+                    <p>I've never programmed a website from scratch <b>all by myself</b> so as the lone developer, I gave myself a week and a few days to not only implement the technologies, but learn some along the way. Below are the final implementations of each main page (excluding the landing page seen above)!</p>
+                </div>
+            </div>
+            <div class="griditem fivecol">
+                <img src="/images/casestudy_imgs_bucsa/bucsa_mentorship.png" alt="Mentorship Full Page" class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bucsa/bucsa_about.png" alt="About Us Full Page" class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bucsa/bucsa_ambassadors.png" alt="Ambassadors Full Page" class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bucsa/bucsa_resources.png" alt="Resources Full Page" class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bucsa/bucsa_contact.png" alt="Contact Us Full Page" class="figma_cs_imgs2">
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b>Demo</b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/HP6hkymmq28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
         </section>
         <section class="casestudy_section csreflection">
             <h2 class="cs_header">Reflection</h2>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b>Conclusions</b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <h4 class="h4sub">Awarded first place!</h4>
+                    <p>This project was certainly a lot different from the ones I tackled before because I had the job of fully designing and developing the product. I learned to value <b>the compromises between ideation and feasible design</b>. While I wish my teammates could put as much effort in as I did, I learned a lot about what I could manage and what I excel at.</p>
+                    <br>
+                    <p>The next step is to collaborate with the Ambassadors to get the website up and running on their end. It was an absolute pleasure spending countless hours night after night to not only get a finished product turned in, but a clean, polished redesign that accounted for as many factors as possible.</p>
+                    <br>
+                    <p><b>Thanks for reading!</b></p>
+                </div>
+            </div>
         </section>
     </main>
 
