--- a/bucsambassadors.html
+++ b/bucsambassadors.html
@@ -292,7 +292,7 @@
                     <h3><b>Demo</b></h3>
                 </div>
                 <div class="cs_content_text">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/HP6hkymmq28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="youtube_vid" width="560" height="315" src="https://www.youtube.com/embed/HP6hkymmq28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
