--- a/bucsambassadors.html
+++ b/bucsambassadors.html
@@ -60,7 +60,7 @@
         </ul>
     </nav>
 
-    <main>
+    <main class="casestudy">
         <section class="csheader">
             <div class="bucsa_header_img"></div>
         </section>
