bucsa casestudy 8 debug footer bc main had class

--- a/bucsambassadors.html
+++ b/bucsambassadors.html
@@ -60,60 +60,60 @@
         </ul>
     </nav>
 
-    <main class="casestudy">
+    <main>
         <section class="csheader">
             <div class="bucsa_header_img"></div>
         </section>
         <section class="casestudy_section csoverview">
             <h1 class="cs_header">BU CS Ambassadors</h1>
             <div class="overview_grid">
-                    <div class="grid_content">
-                        <h4 class="h4sub">Role</h4>
-                        <p>Product Designer</p>
-                        <p>Web Developer</p>
-                    </div>
-                    <div class="grid_content">
-                        <h4 class="h4sub">Duration</h4>
-                        <p>May 2021 (2 weeks)</p>
-                    </div>
-                    <div class="grid_content">
-                        <h4 class="h4sub">Team</h4>
-                        <p>Alice Wang</p>
-                        <p>Katie So</p>
-                    </div>
-                    <div class="grid_content">
-                        <h4 class="h4sub">Tools</h4>
-                        <p>Figma, Adobe Illustrator, HTML, CSS, JavaScript, Node.js, Express.js</p>
-                    </div>
+                <div class="grid_content">
+                    <h4 class="h4sub">Role</h4>
+                    <p>Product Designer</p>
+                    <p>Web Developer</p>
                 </div>
-                <div class="cs_content">
-                    <div class="cs_content_title">
-                        <h3><b>Overview</b></h3>
-                    </div>
-                    <div class="cs_content_text">
-                        <h4 class="h4sub">BU CS Ambassadors (BUCSA) hosted a web design competition to redesign their entire website.</h4>
-                        <p>Over the course of two weeks, my team and I came together to create the new face for BUCSA. As a student group that aimed to build connections through mentorship, our goal was not only to add color to a website, but to develop layers of depth in the meaning of their brand. Although I was the only web developer on the team, AKA Designs was successful in earning <b>first place</b> for our project.</p>
-                    </div>
+                <div class="grid_content">
+                    <h4 class="h4sub">Duration</h4>
+                    <p>May 2021 (2 weeks)</p>
                 </div>
-                <div class="cs_content">
-                    <div class="cs_content_title">
-                        <h3><b>My Contribution</b></h3>
-                    </div>
-                    <div class="cs_content_text">
-                        <p>The timing of the project fell right after finals week for Boston University students. My teammates, Alice and Katie, were occupied with vacation plans and internship transitions, and so I took the lead product designer role in this endeavor. Furthermore, I developed the entire website using HTML, CSS, and JavaScript, implementing a Node.js back-end on an Express.js framework to add functionality to a mailing list and contact form.</p>
-                    </div>
+                <div class="grid_content">
+                    <h4 class="h4sub">Team</h4>
+                    <p>Alice Wang</p>
+                    <p>Katie So</p>
                 </div>
-                <div class="cs_content">
-                    <div class="cs_content_title">
-                        <h3><b>Our Solution</b></h3>
-                    </div>
-                    <div class="cs_content_text">
-                        <p>Our solution was both a full website redesign that <b>emphasized the focus on the mentor-mentee program.</b> It utilized modern design trends and pulled from the Boston University design system with the reds and blacks to visually appeal to incoming computer science students. Find the demo video further below and the GitHub repo <a href="https://github.com/andyyvo/bucsawebdesign">here.</a></p>
-                    </div>
+                <div class="grid_content">
+                    <h4 class="h4sub">Tools</h4>
+                    <p>Figma, Adobe Illustrator, HTML, CSS, JavaScript, Node.js, Express.js</p>
                 </div>
-                <div class="cs_overview_img">
-                    <img src="/images/casestudy_imgs_bucsa/three_devices.png" alt="BUCSA Redesign Mockups">
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b>Overview</b></h3>
                 </div>
+                <div class="cs_content_text">
+                    <h4 class="h4sub">BU CS Ambassadors (BUCSA) hosted a web design competition to redesign their entire website.</h4>
+                    <p>Over the course of two weeks, my team and I came together to create the new face for BUCSA. As a student group that aimed to build connections through mentorship, our goal was not only to add color to a website, but to develop layers of depth in the meaning of their brand. Although I was the only web developer on the team, AKA Designs was successful in earning <b>first place</b> for our project.</p>
+                </div>
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b>My Contribution</b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <p>The timing of the project fell right after finals week for Boston University students. My teammates, Alice and Katie, were occupied with vacation plans and internship transitions, and so I took the lead product designer role in this endeavor. Furthermore, I developed the entire website using HTML, CSS, and JavaScript, implementing a Node.js back-end on an Express.js framework to add functionality to a mailing list and contact form.</p>
+                </div>
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b>Our Solution</b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <p>Our solution was both a full website redesign that <b>emphasized the focus on the mentor-mentee program.</b> It utilized modern design trends and pulled from the Boston University design system with the reds and blacks to visually appeal to incoming computer science students. Find the demo video further below and the GitHub repo <a href="https://github.com/andyyvo/bucsawebdesign">here.</a></p>
+                </div>
+            </div>
+            <div class="cs_overview_img">
+                <img src="/images/casestudy_imgs_bucsa/three_devices.png" alt="BUCSA Redesign Mockups">
+            </div>
         </section>
         <section class="casestudy_section cskickoff">
             <h2 class="cs_header">Kickoff</h2>
