--- a/bumpcall.html
+++ b/bumpcall.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andy Vo | BU CS Ambassadors</title>
+    <title>Andy Vo | bumpcall</title>
     <meta name="description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-199547569-1"></script>
@@ -62,28 +62,28 @@
 
     <main>
         <section class="csheader">
-            <div class="bucsa_header_img"></div>
+            <div class="bumpcall_header_img"></div>
         </section>
         <section class="casestudy_section whiteback">
-            <h1 class="cs_header">BU CS Ambassadors</h1>
+            <h1 class="cs_header">bumpcall</h1>
             <div class="overview_grid">
                 <div class="grid_content">
                     <h4 class="h4sub">Role</h4>
-                    <p>Product Designer</p>
-                    <p>Web Developer</p>
+                    <p>Director of Product Design</p>
+                    <p>Digital Designer Intern</p>
                 </div>
                 <div class="grid_content">
                     <h4 class="h4sub">Duration</h4>
-                    <p>May 2021 (2 weeks)</p>
+                    <p>March 2021 - June 2021</p>
                 </div>
                 <div class="grid_content">
                     <h4 class="h4sub">Team</h4>
-                    <p>Alice Wang</p>
-                    <p>Katie So</p>
+                    <p>Grady Gillett</p>
+                    <p>Sarah Bargfrede</p>
                 </div>
                 <div class="grid_content">
                     <h4 class="h4sub">Tools</h4>
-                    <p>Figma, Adobe Illustrator, HTML, CSS, JavaScript, Node.js, Express.js</p>
+                    <p>Figma, Adobe Illustrator</p>
                 </div>
             </div>
             <div class="cs_content">
@@ -101,8 +101,6 @@
                 </div>
                 <div class="cs_content_text">
                     <p>The timing of the project fell right after finals week for Boston University students. My teammates, Alice and Katie, were occupied with vacation plans and internship transitions, and so I took the lead product designer role in this endeavor. Furthermore, I developed the entire website using HTML, CSS, and JavaScript, implementing a Node.js back-end on an Express.js framework to add functionality to a mailing list and contact form.</p>
-                    <br>
-                    <p>From a personal perspective as a computer science student, I saw this as an opportunity to ensure a better future for incoming CS students through my web development skills.</p>
                 </div>
             </div>
             <div class="cs_content">
@@ -307,8 +305,6 @@
                 <div class="cs_content_text">
                     <h4 class="h4sub">Awarded first place!</h4>
                     <p>This project was certainly a lot different from the ones I tackled before because I had the job of fully designing and developing the product. I learned to value <b>the compromises between ideation and feasible design</b>. While I wish my teammates could put as much effort in as I did, I learned a lot about what I could manage and what I excel at.</p>
-                    <br>
-                    <p>Beyond the scope of the project, what I truly took out of this experience was <b>the opportunity to give back to a part of the Computer Science community at BU</b>. Coming off of a web app project for my software engineering course, the timing of this project could not have been better. To those who have read this far, please reach out to me for all of your freelancing web design and web development needs!</p>
                     <br>
                     <p>The next step is to collaborate with the Ambassadors to get the website up and running on their end. It was an absolute pleasure spending countless hours night after night to not only get a finished product turned in, but a clean, polished redesign that accounted for as many factors as possible.</p>
                     <br>
